Changed About Me

--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -9,7 +9,7 @@
     <a href="portfolio.html">Portfolio</a>
     <a href="about_me.html">About Me</a>
     <h1>ABOUT ME</h1>
-    <center></center><img src="images/all_me.gif" height="250"></center><br>    
+    <center><img src="images/all_me.gif" height="250"></center><br>    
     <P><B><FONT FACE="Geneva" SIZE="5">Chad Whiteley</B><FONT FACE="Geneva"> is a native Texan, is a native of Lufkin, Texas who moved to California to chase a career in business administration before commencing a career in education.  He loves to study after the great mathematical philosophers like Pythagoras and Descartes. Mostly, he enjoys a nice cold root beer and hanging out in the warm waters of the Gulf of Mexico with his lovely wife, Maria.  He is excited to be a part of the Panther family at CE King High School..</FONT></P>
     <br>
     <a target="_blank" href="https://scratch.mit.edu">
