--- a/my_website/index.html
+++ b/my_website/index.html
@@ -5,9 +5,9 @@
     <title>Home</title>
   </head>
   <body>
-    <a href="index.html">Home</a>
-    <a href="portfolio.html">Portfolio</a>
-    <a href="about_me.html">About Me</a>
+    <form><input type="button" value="Home" onclick="window.location.href='index.html'">
+    <form><input type="button" value="Portfolio" onclick="window.location.href='portfolio.html'">
+    <form><input type="button" value="About Me" onclick="window.location.href='about_me.html'"></form>
     <h1>This is Chad Whiteley's Home Page!</h1>
     <img src="images/home.gif" height="250">
   </body>
