--- a/my_website/index.html
+++ b/my_website/index.html
@@ -90,7 +90,7 @@ body, html {
   <p>For 35 years, I have been exploring computers. From the days of the Commodore to working on the county's first portable computers, I have always been found behind a screen. You can honestly say that I was working with computers before computers were cool. In 2017, I was made aware that Sheldon ISD had several award winning young computer scientists and felt compelled to help develop a program at C.E. King High School to address the need. I am thrilled to be a part of the program at C.E. King High School. I am looking forward to facilitating greatness.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>Chad WHiteley</b></p><br>
+      <p><b><i class="fa fa-user w3-margin-right"></i>Chad Whiteley</b></p><br>
       <img src="/my_website/images/Chad_Whiteley.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
     </div>
 
