--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -63,7 +63,6 @@ body, html {
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i>
     </a>
   </div>
 
@@ -72,7 +71,6 @@ body, html {
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    <a href="#" class="w3-bar-item w3-button">SEARCH</a>
   </div>
 </div>
 
@@ -155,7 +153,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/soccergame.gif" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soccer Game">
+      <img src="/my_website/images/soccergame.gif" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
     </div>
 
     <div class="w3-col m3">
