--- a/my_website/index.html
+++ b/my_website/index.html
@@ -225,8 +225,9 @@ body, html {
           <div class="w3-half">
             <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
           </div>
-        </div>
-        <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          <div class="w3-full">
+            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          </div>
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           <i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
