--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -156,7 +156,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="/my_website/images/replit.jpg" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Bear closeup">
     </div>
 
     <div class="w3-col m3">
@@ -202,7 +202,7 @@ body, html {
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">C.E.King High School.School</h3>
+  <h3 class="w3-center">C.E.King High School</h3>
   <p class="w3-center"><em>I'd love your feedback!</em></p>
 
   <div class="w3-row w3-padding-32 w3-section">
@@ -223,13 +223,13 @@ body, html {
             <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
           </div>
           <div class="w3-half">
-            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+            <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"><br>
           </div>
-          <div class="w3-full">
-            <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          <div>
+          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
           </div>
         <button class="w3-button w3-black w3-right w3-section" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+          </p><i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
       </form>
     </div>
@@ -242,6 +242,7 @@ body, html {
   <div class="w3-xlarge w3-section">
   
   </div>
+  
 </footer>
  
 <!-- Add Google Maps -->
