Changed Cover Image

--- a/my_website/index.html
+++ b/my_website/index.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-    background-image: url('/my_website/images/Houston_skyline_panorama.jpg');
+    background-image: url('/my_website/sheldon.jpg');
     min-height: 100%;
 }
 
