--- a/my_website/index.html
+++ b/my_website/index.html
@@ -216,7 +216,7 @@ body, html {
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 281 727 2700<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: chadwhiteley@sheldonisd.com<br>
       </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
+      <p>Swing by for a cup of <i class="fa fa-coffee"></i>!<!--, or leave me a note:</p>
       <form action="/action_page.php" method="POST" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
@@ -234,7 +234,7 @@ body, html {
       </form>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
