Fixed Contact Form

--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -231,10 +231,10 @@ body, html {
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           </p><i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
-      </form>
+      </form> -->
     </div>
   </div>
-</div> -->
+</div> 
 
 
 
