--- a/my_website/index.html
+++ b/my_website/index.html
@@ -231,10 +231,10 @@ body, html {
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           </p><i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
-      </form>
+      </form>-->
     </div>
   </div>
-</div> -->
+</div> 
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
