Fixed Contact Form

--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -156,11 +156,11 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/replit.jpg" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="/my_website/images/replit.jpg" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="/my_website/images/soccer.jpg" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
     </div>
   </div>
 
