--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -148,25 +148,30 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/my_website/images/cat.jpg" style="width:100%" onclick="window.open('https://scratch.mit.edu/projects/166760010/')" class="w3-hover-opacity" alt="Scratch Starter Project">
+      <img src="/my_website/images/cat.jpg" title="Day2-Sratch Program" style="width:100%" onclick="window.open('https://scratch.mit.edu/projects/166760010/')" class="w3-hover-opacity" alt="Scratch Starter Project">
+      <h3>Day 2-Scratch Program</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/soccergame.gif" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
+      <img src="/my_website/images/soccergame.gif" title="Day3-Downlaodable QR" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
+      <h3>Day 3-Downloadable QR</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/replit.jpg" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
+      <img src="/my_website/images/replit.jpg" title="Day4-Repl.it Program" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
+      <h3>Day 4-Repl.it Program</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/soccer.jpg" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
+      <img src="/my_website/images/soccer.jpg" title="Day5-Soccer Game AIA" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
+      <h3>Day 5-Soccer Game AIA</h3>    
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <!--<img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">-->
+      <img src="/my_website/images/figure_1-1.jpg" title="Day6-Image Manipulation" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Color Modification">
+      <h3>Day 6-Image Manipulation</h3>
     </div>
 
     <div class="w3-col m3">
@@ -216,7 +221,7 @@ body, html {
         <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +1 281 727 2700<br>
         <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: chadwhiteley@sheldonisd.com<br>
       </div>
-      <p>Swing by for a cup of <i class="fa fa-coffee"></i>!, <!-- or leave me a note:</p>
+      <p>Swing by for a cup of <i class="fa fa-coffee"></i>!<!--, or leave me a note:</p>
       <form action="/action_page.php" method="POST" target="_blank">
         <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
           <div class="w3-half">
@@ -231,15 +236,13 @@ body, html {
         <button class="w3-button w3-black w3-right w3-section" type="submit">
           </p><i class="fa fa-paper-plane"></i> SEND MESSAGE
         </button>
-      </form> -->
+      </form>-->
     </div>
   </div>
 </div> 
 <div>
   
 </div>
-
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
