--- a/my_website/index.html
+++ b/my_website/index.html
@@ -148,25 +148,30 @@ body, html {
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/my_website/images/cat.jpg" style="width:100%" onclick="window.open('https://scratch.mit.edu/projects/166760010/')" class="w3-hover-opacity" alt="Scratch Starter Project">
+      <img src="/my_website/images/cat.jpg" title="Day2-Sratch Program" style="width:100%" onclick="window.open('https://scratch.mit.edu/projects/166760010/')" class="w3-hover-opacity" alt="Scratch Starter Project">
+      <h3>Day 2-Scratch Program</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/soccergame.gif" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
+      <img src="/my_website/images/soccergame.gif" title="Day3-Downlaodable QR" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Scan the QR Code to Download.">
+      <h3>Day 3-Downloadable QR</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/replit.jpg" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
+      <img src="/my_website/images/replit.jpg" title="Day4-Repl.it Program" style="width:100%" onclick="window.open('https://repl.it/IyZA/4')" class="w3-hover-opacity" alt="Replit Program">
+      <h3>Day 4-Repl.it Program</h3>
     </div>
 
     <div class="w3-col m3">
-      <img src="/my_website/images/soccer.jpg" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
+      <img src="/my_website/images/soccer.jpg" title="Day5-Soccer Game AIA" style="width:100%" onclick="window.open('/my_website/Soccer_Game.aia')" class="w3-hover-opacity" alt="Download Soccer Game AIA File">
+      <h3>Day 5-Soccer Game AIA</h3>    
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <!--<img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">-->
+      <img src="/my_website/images/figure_1-1.jpg" title="Day6-Image Manipulation" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Color Modification">
+      <h3>Day 6-Image Manipulation</h3>
     </div>
 
     <div class="w3-col m3">
