--- a/my_website/index.html
+++ b/my_website/index.html
@@ -175,7 +175,9 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <!--<img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">-->
+      <img src="/my_website/images/Texas_Population_Growth.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Texas Population Growth">
+       <h3>Day 7-Data Manipulation</h3>
+       <h4>Download data files here....</h4>
     </div>
 
     <div class="w3-col m3">
