--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -62,6 +62,7 @@ body, html {
     <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT ME</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
+    <a href="students.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-graduation-cap"></i> MY STUDENTS</a>
     </a>
   </div>
 
@@ -177,7 +178,7 @@ body, html {
     <div class="w3-col m3">
       <img src="/my_website/images/Texas_Population_Growth.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Texas Population Growth">
        <h3>Day 7-Data Manipulation</h3>
-       <h4>Download data files here....</h4>
+       <h4><a href="Texas_aggregate_1.py" target="_blank">Download data files here....</a></h4>
     </div>
 
     <div class="w3-col m3">
