--- a/my_website/about_me.html
+++ b/my_website/about_me.html
@@ -182,7 +182,8 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <!--<img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">-->
+      <img src="/my_website/images/Netlogo.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="NetLogo Simulation">
+      <h3>Day 8 - NetLogo Simulation</h3>
     </div>
 
     <div class="w3-col m3">
