--- a/my_website/index.html
+++ b/my_website/index.html
@@ -71,6 +71,7 @@ body, html {
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT ME</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+    <a href="students.html" class="w3-bar-item w3-button" onclick="toggleFunction()">MY STUDENTS</a>
   </div>
 </div>
 
