--- a/my_website/students.html
+++ b/my_website/students.html
@@ -71,6 +71,7 @@ body, html {
     <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT KHS COMPUTER SCIENCE</a>
     <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">STUDENT PAGES</a>
     <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT THE TEACHER</a>
+    <a href="index.html" class="w3-bar-item w3-button" onclick="toggleFunction()">BACK TO WHITELEY'S PAGE</a>
   </div>
 </div>
 
