--- a/my_website/students.html
+++ b/my_website/students.html
@@ -84,7 +84,7 @@ body, html {
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
-  <h3 class="w3-center">ABOUT KHS COMPUTER SCEINCE</h3>
+  <h3 class="w3-center">ABOUT KHS COMPUTER SCIENCE</h3>
   <p class="w3-center"><em>We love computer science</em></p>
   <p>Computer Science Principles introduces students to the foundational concepts of the field and challenges them to explore how computing and technology can impact the world.</p>
   <div class="w3-row">
